# Micro-shop

./: README.md  alembic.ini  build.sh  main.py  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_01_22_0754-5af4fb8635b6_create_products_table.py  2024_01_22_0808-326688f4a38b_create_users_table.py  2024_01_23_0543-bc65228aa367_create_posts_table.py  2024_01_23_0612-f1093313e164_create_profile_table.py
api_v1/products/: crud.py  dependensies.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  post.py  product.py  profile.py  user.py
items/: views.py
templates/: base.html  index.html
tests/: test_status.py
