[tool.poetry]
name = "micro-shop"
version = "0.1.0"
description = ""
authors = ["Krushovice <Kickstar69@yandex.ru>"]
readme = "README.md"
packages = [{include = "micro_shop"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standart"], version = "^0.26.0"}
pydantic = {extras = ["email"], version = "^2.5.3"}
jinja2 = "^3.1.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
